--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["nxtmart/package.json","nxtmart/.eslintrc","nxtmart/src/components/Header/index.js","nxtmart/src/components/Cart/index.js"],"fileToBeOpened":"nxtmart/src/components/Cart/index.css"}
+{"ignoredFilesOrFolders":[],"openFiles":["nxtmart/.eslintrc","nxtmart/src/components/Header/index.js","nxtmart/src/components/Cart/index.js","nxtmart/src/components/Cart/index.css"],"fileToBeOpened":"nxtmart/package.json"}
